--- a/Info.css
+++ b/Info.css
@@ -39,7 +39,7 @@ header h2 {
     border-right: none;
     border-color: white;
     color: rgb(255, 205, 5);
-    max-width: 100vw;
+    width: 100vw;
     padding: 10px;
     margin-bottom: -10px;
     text-align: center;
@@ -98,7 +98,7 @@ transition: ease 0.05;
     text-decoration: underline;
     
 }
-p{
+main p{
     margin:auto;
     text-align: center;
     font-size:29px;
