--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
-
-
-
 @media (max-width: 500px) {
     /* Mobile */
 
     body {
         display: grid;
-        grid-template-rows: 135px 1fr auto;
+        grid-template-rows: 150px 1fr auto;
         min-height: 100vh;
         width: 100%;
         background-color: rgb(73, 111, 73);
@@ -19,37 +16,38 @@
         margin: auto;
         width: 100%;
         height: 100%;
-        border-bottom:  thick double #000000;;
+        border-bottom: thick double #000000;
+        ;
         display: block;
-        
+
     }
 
-    header h1{
+    header h1 {
         margin: auto;
         text-align: center;
         font-family: 'Bungee Spice', sans-serif;
         margin-bottom: -27px;
     }
 
-    header h1{
+    header h1 {
         font-size: 27px;
     }
+
     header h2 {
-        font-size:31px;
+        font-size: 45px;
         background-color: rgb(255, 255, 255);
         border-style:groove;
         border-left: none;
         border-right: none;
         border-color: white;
         color: rgb(255, 205, 5);
-        max-width: 100vw;
+        width: 100vw;
         padding: 10px;
-        margin-bottom: 5px;
+        margin-bottom: -10px;
         text-align: center;
         font-family: "Kdam Thmor Pro", sans-serif;
     }
-    
-    
+
     nav ul {
         display: flex;
         text-align: center;
@@ -59,8 +57,8 @@
         padding: 2px;
         float: right;
         list-style: none;
-       
-       
+        margin: auto;
+        margin-top: 8px;
     }
 
     nav ul li {
@@ -68,107 +66,122 @@
         text-align: center;
         list-style: none;
         padding-left: 25px;
-        
-        
+
+
     }
 
 
-    
-nav a {
-    text-decoration: none;
-    display: block;
-    color: white;
-   
-}
 
-nav{
+    nav a {
+        text-decoration: none;
+        display: block;
+        color: white;
+
+    }
+
+    nav {
         background-color: rgb(19, 3, 3);
     }
 
-nav ul a:hover, a:focus {
-    color: rgb(144, 155, 153);
+    nav ul a:hover,
+    a:focus {
+        color: rgb(144, 155, 153);
 
-    transition: ease 0.05;
-}
+        transition: ease 0.05;
+    }
 
-.center{
-    margin-top: 40px;
-    text-align: center;
-    background-image:linear-gradient(rgb(73, 111, 73), rgb(255, 216, 60));
-    padding: 10px;   
-}
-.top-right{
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
-    margin-bottom:-20px;
-}
+    .center {
+        margin-top: 40px;
+        text-align: center;
+        background-image: linear-gradient(rgb(73, 111, 73), rgb(255, 216, 60));
+        padding: 10px;
+    }
 
-main div p{
-    font-size: 23px;
-}
+    .top-right {
+        color: rgb(0, 0, 0);
+        text-decoration: underline;
+        margin-bottom: -20px;
+    }
 
-.color{
-    color:rgb(46, 22, 22);
-    font-size: 17px;
-}
+    main div p {
+        font-size: 23px;
+    }
 
-footer{
-    background-color: rgb(160, 31, 31);
-}
+    .color {
+        color: rgb(46, 22, 22);
+        font-size: 17px;
+    }
 
-.foot-list{
-    
-    font-family: sans-serif;
+    footer {
+        background-color: rgb(160, 31, 31);
+    }
+
+    .foot-list {
+
+        font-family: sans-serif;
         text-transform: uppercase;
         font-size: 15px;
-        color:white;
-}
+        color: white;
+    }
 
-footer ul, li{
-    list-style: none;
-    display: flex;
-    color: rgb(255, 255, 255);
-   
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;list-style: none;
-    text-decoration: none;
-}
-footer a{
-    list-style: none;
-    text-decoration: none;
-    list-style-type: none;
-    color: white;
-    padding-right:30px;
-}
+    footer ul,
+    li {
+        list-style: none;
+        display: flex;
+        color: rgb(255, 255, 255);
 
-.past-center{
-    text-align: center;
-    color:rgb(255, 255, 255);
-    padding-bottom:20px;
-   
-}
+        margin-right: auto;
+        margin-left: auto;
+        text-align: center;
+        list-style: none;
+        text-decoration: none;
+    }
 
-.textSpin{
-    background-size: contain;
-    min-height: 320px;
-    text-align: center;
-    font-size: 30px;
-    padding-top: 10px;
-    margin: auto;
-    display: block;
-}
-footer img{
-    width:30px;
-    
-    float: left;
-    padding-left: 50px;
-    
-}
-footer p{
-    float: right;
-    padding-right: 50px;
-}
+    footer a {
+        list-style: none;
+        text-decoration: none;
+        list-style-type: none;
+        color: white;
+        padding-right: 30px;
+    }
+
+    .past-center {
+        text-align: center;
+        color: rgb(255, 255, 255);
+        padding-bottom: 20px;
+
+    }
+
+    .textSpin {
+        background-size: contain;
+        min-height: 320px;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin: auto;
+        display: block;
+    }
+
+    footer img {
+        width: 30px;
+
+        float: left;
+        padding-left: 50px;
+
+    }
+
+    footer p {
+        float: right;
+        padding-right: 50px;
+    }
+    main img{
+        display: block;
+        margin: auto;
+        width: 100vw;
+        height: auto;
+        background-size: cover;
+        margin-top: 10px;
+    }
 }
 
 
@@ -177,7 +190,8 @@ footer p{
 
 
 @media (min-width: 501px) {
-/* PC or desktops */
+
+    /* PC or desktops */
     body {
         display: grid;
         grid-template-rows: 160px 1fr auto;
@@ -193,37 +207,39 @@ footer p{
         margin: auto;
         width: 100%;
         height: 100%;
-        border-bottom:  thick double #000000;;
+        border-bottom: thick double #000000;
+        ;
         display: block;
-        
+
     }
 
-    header h1{
+    header h1 {
         margin: auto;
         text-align: center;
         font-family: 'Bungee Spice', sans-serif;
         margin-bottom: -30px;
     }
 
-    header h1{
+    header h1 {
         font-size: 27px;
     }
+
     header h2 {
         font-size: 45px;
         background-color: rgb(255, 255, 255);
-        border-style:groove;
+        border-style: groove;
         border-left: none;
         border-right: none;
         border-color: white;
         color: rgb(255, 205, 5);
-        max-width: 100vw;
+        width: 100vw;
         padding: 10px;
         margin-bottom: -10px;
         text-align: center;
         font-family: "Kdam Thmor Pro", sans-serif;
     }
-    
-    
+
+
     nav ul {
         display: flex;
         text-align: center;
@@ -233,8 +249,8 @@ footer p{
         padding: 2px;
         float: right;
         list-style: none;
-       padding-top:-27px;
-       
+        padding-top: -27px;
+
     }
 
     nav ul li {
@@ -242,109 +258,111 @@ footer p{
         text-align: center;
         list-style: none;
         padding-left: 25px;
-        
-        
+
+
     }
 
 
-    
-nav a {
-    text-decoration: none;
-    display: block;
-    color: white;
-   
-}
 
-nav{
+    nav a {
+        text-decoration: none;
+        display: block;
+        color: white;
+
+    }
+
+    nav {
         background-color: rgb(19, 3, 3);
     }
 
-nav ul a:hover, a:focus {
-    color: rgb(39, 53, 50);
+    nav ul a:hover,
+    a:focus {
+        color: rgb(39, 53, 50);
 
-    transition: ease 0.05;
-}
+        transition: ease 0.05;
+    }
 
-.center{
-    margin-top: 40px;
-    text-align: center;
-    background-image:linear-gradient(rgb(73, 111, 73), rgb(255, 216, 60));
-    padding: 10px;   
-}
-.top-right{
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
-    margin-bottom:-20px;
-    font-size: 40px;
-}
+    .center {
+        margin-top: 40px;
+        text-align: center;
+        background-image: linear-gradient(rgb(73, 111, 73), rgb(255, 216, 60));
+        padding: 10px;
+    }
 
-main div p{
-    font-size: 23px;
-}
+    .top-right {
+        color: rgb(0, 0, 0);
+        text-decoration: underline;
+        margin-bottom: -20px;
+        font-size: 40px;
+    }
 
-.color{
-    color:rgb(46, 22, 22);
-    font-size: 17px;
-}
+    main div p {
+        font-size: 23px;
+    }
 
-footer{
-    background-color: rgb(160, 31, 31);
-}
+    .color {
+        color: rgb(46, 22, 22);
+        font-size: 17px;
+    }
 
-.foot-list{
-    
-    font-family: sans-serif;
+    footer {
+        background-color: rgb(160, 31, 31);
+    }
+
+    .foot-list {
+
+        font-family: sans-serif;
         text-transform: uppercase;
         font-size: 15px;
-        color:white;
-}
+        color: white;
+    }
 
-footer ul, li{
-    list-style: none;
-    display: flex;
-    color: rgb(255, 255, 255);
-   
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;list-style: none;
-    text-decoration: none;
-}
-footer a{
-    list-style: none;
-    text-decoration: none;
-    list-style-type: none;
-    color: white;
-    padding-right:30px;
-}
+    footer ul,
+    li {
+        list-style: none;
+        display: flex;
+        color: rgb(255, 255, 255);
 
-.past-center{
-    text-align: center;
-    color:rgb(255, 255, 255);
-    padding-bottom:20px;
-   
-}
+        margin-right: auto;
+        margin-left: auto;
+        text-align: center;
+        list-style: none;
+        text-decoration: none;
+    }
 
-.textSpin{
-    background-size: contain;
-    min-height: 320px;
-    text-align: center;
-    font-size: 30px;
-    padding-top: 10px;
-    /* margin: auto; */
-    display: block;
-    margin:0;
-    margin-bottom: -50px;
-    height:800px;
-}
-footer img{
-    width:30px;
-    
+    footer a {
+        list-style: none;
+        text-decoration: none;
+        list-style-type: none;
+        color: white;
+        padding-right: 30px;
+    }
+
+    .past-center {
+        text-align: center;
+        color: rgb(255, 255, 255);
+        padding-bottom: 20px;
+
+    }
+
+footer img {
+    width: 30px;
+
     float: left;
     padding-left: 50px;
-    
+
 }
-footer p{
+
+footer p {
     float: right;
     padding-right: 50px;
 }
+
+main img{
+    display: block;
+    margin: auto;
+    width: auto;
+    height: auto;
+}
+
 }
