--- a/competitions.css
+++ b/competitions.css
@@ -15,7 +15,7 @@ body { /* structure format */
     box-sizing: border-box;
 }
 main p{
-    font-size: 30px;;
+    font-size: 30px;
 }
 
 header {
@@ -152,25 +152,47 @@ main img{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* PC */
 @media (min-width: 501px) {
 body { /* structure format */
     display: grid;
-    grid-template-rows: 160px 1fr auto;
+    grid-template-rows: 150px 1fr auto;
     min-height: 100vh;
     width: 100%;
     background-color: rgb(73, 111, 73);
     margin: auto;
 }
 
+*{
+    box-sizing: border-box;
+}
 
+main p{
+    font-size: 30px;
+    text-align: center;
+}
 header {
     background-image: linear-gradient(rgb(237, 214, 99), rgb(109, 7, 36));
     margin: auto;
     width: 100%;
     height: 100%;
     border-bottom: thick double #000000;
-    ;
     display: block;
 
 }
@@ -183,11 +205,11 @@ header h1 {
 }
 
 header h1 {
-    font-size: 27px;
+    font-size: 25px;
 }
 
 header h2 {
-    font-size: 45px;
+    font-size: 38px;
     background-color: rgb(255, 255, 255);
     border-style: groove;
     border-left: none;
@@ -201,7 +223,6 @@ header h2 {
     font-family: "Kdam Thmor Pro", sans-serif;
 }
 
-
 nav ul {
     display: flex;
     text-align: center;
@@ -211,19 +232,19 @@ nav ul {
     padding: 2px;
     float: right;
     list-style: none;
-    padding-top: -27px;
-
+    margin: auto;
+    padding-top: 20px;
 }
 
 nav ul li {
     display: flex;
     text-align: center;
     list-style: none;
-    padding-left: 25px;
-
+    margin: auto;
+    padding: 9px;
+    font-size: 17px;
 
 }
-
 
 
 
@@ -244,7 +265,6 @@ a:focus {
 
     transition: ease 0.05;
 }
-
 footer {
     background-color: rgb(160, 31, 31);
 }
