--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@
     /* PC or desktops */
     body {
         display: grid;
-        grid-template-rows: 160px 1fr auto;
+        grid-template-rows: 150px 1fr auto;
         min-height: 100vh;
         width: 100%;
         background-color: rgb(43, 47, 43);
@@ -229,7 +229,6 @@
         width: 100%;
         height: 100%;
         border-bottom: thick double #000000;
-
         display: block;
 
     }
@@ -238,15 +237,15 @@
         margin: auto;
         text-align: center;
         font-family: 'Bungee Spice', sans-serif;
-        margin-bottom: -30px;
+        margin-bottom: -27px;
     }
 
     header h1 {
-        font-size: 27px;
+        font-size: 25px;
     }
 
     header h2 {
-        font-size: 45px;
+        font-size: 38px;
         background-color: rgb(255, 255, 255);
         border-style: groove;
         border-left: none;
@@ -260,7 +259,6 @@
         font-family: "Kdam Thmor Pro", sans-serif;
     }
 
-
     nav ul {
         display: flex;
         text-align: center;
@@ -270,17 +268,17 @@
         padding: 2px;
         float: right;
         list-style: none;
-        padding-top: -27px;
-
-
+        margin: auto;
+        padding-top: 20px;
     }
 
     nav ul li {
         display: flex;
         text-align: center;
         list-style: none;
-        padding-left: 25px;
-
+        margin: auto;
+        padding: 9px;
+        font-size: 17px;
 
     }
 
@@ -299,7 +297,7 @@
 
     nav ul a:hover,
     a:focus {
-        color: rgb(39, 53, 50);
+        color: rgb(144, 155, 153);
 
         transition: ease 0.05;
     }
